👷 configure lint scripts for jenkins
Change-Id: Ie16b192db476d65c330e21a09cf74fa79ef72ea7
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/137657
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/.clang-format.7
+++ b/ext/.clang-format.7
@@ -1,14 +1,16 @@
 # -*- mode: yaml; -*-
+# this is copy for .clang-format for clang-format 7.0.1
+# it might be removed and deprecated in any moment
 
 Language: Cpp
 BasedOnStyle: Mozilla
-Standard: c++17
+Standard: C++11
 
 UseTab: Never
 IndentWidth: 4
 ColumnLimit: 140
 AllowShortFunctionsOnASingleLine: None
-AllowShortBlocksOnASingleLine: Never
+AllowShortBlocksOnASingleLine: false
 AllowShortCaseLabelsOnASingleLine: false
 BreakBeforeBraces: Linux
 SortIncludes: false
